[package]
name = "move-links"
version = "0.1.0"
authors = ["Adolin <benmeft0@gamil.com>"]
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "mvl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path-clean = "0.1.0"
clap = "2.33.3"
