[package]
name = "move-links"
version = "0.1.1"
authors = ["Adolin <benmeft0@gamil.com>"]
description = "CLI utility to move (or rename) your files to a new location and redirect all of its symbolic links, to the new path (or name)"
license = "MIT"
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "mvl"

[dependencies]
path-clean = "0.1.0"
clap = "2.33.3"
